# sogolo

./: .gitignore  CMakeLists.txt  Makefile  README.md  func
doc/: DESIGN.md  README.md  TODO.md  evaluation.md  parsing.md
examples/: char.sg  hello.eo  hello.fn
include/: argparse.hpp  error.hpp  errors.hpp  lexer.hpp  node.hpp  parser.hpp  token.hpp  util.hpp
scripts/: push.sh
src/: argparse.cpp  errors.cpp  lexer.cpp  main.cpp  node.cpp  parser.cpp  token.cpp  util.cpp
tests/: parsing.eo
tests/Parsing/: error.fn  first.fn  second.eo  second.fn  third.eo
tests/cpp/: class.cpp  test.cpp  vector.cpp
tests/functions/: main.cpp
tests/lexer/: error1.sg  string.sg
tests/parsing/: error1.fn  error1.sl  error2.fn  first.fn  first.sg  numbers.sg  second.fn  string.sg  third.fn  third.sl
tests/vectors/: main.cpp  triangle.hpp
